--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -1,10 +1,10 @@
-<p>Puppy Info: </p>
+<img src="/images/doge.jpg" width="360px" height="360px">
 
-<label>Name:</label>
-<h3><%= @puppy.name %> </h3>
+<br/> 
 
-<label>Breed:</label>
-<h4><%= @puppy.breed %> </h4>
+<h4>Name: <%= @puppy.name %> </h4>
+
+<h4>Breed: <%= @puppy.breed %> </h4>
 
 <form method="get" action="/puppies">
     <button type="submit">Return To Home</button>
